--- a/Angela Yu Full Web Development Course/EJS/todolist-v1/views/list.ejs
+++ b/Angela Yu Full Web Development Course/EJS/todolist-v1/views/list.ejs
@@ -9,9 +9,27 @@
 </head>
 
 <body>
+    <h1>
+        <%= kindOfDay %>
+            To Do List </h1>
 
-    <h1>Its a
-        <%=kindOfDay%> Day! </h1>
+    <ul>
+        <li>Buy Food</li>
+        <li>Cook The Food</li>
+        <li>Eat The Food</li>
+
+        <% for (i=0; i<newListItems.length; i++) { %>
+            <li>
+                <%= newListItems[i] %>
+            </li>
+            <% } %>
+    </ul>
+
+    <form action="/" method="post">
+        <input type="text" name="newItem">
+        <button type="submit" name="button">Add</button>
+    </form>
+
 </body>
 
 </html>
